--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base44-app",
-  "homepage": "https://Noam13-w.github.io/blockclick",
+  "homepage": "https://Noam13-w.github.io/Blocklickapp", 
   "private": true,
   "version": "0.0.0",
   "type": "module",
